Add geneBlacklistFilter, SPLICE_AI and ALPHA_MISSENSE to example YAML files. Return exit code from exomiser-cli